--- a/index.html
+++ b/index.html
@@ -1,40 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <div id="smart-button-container">
+ <div id="smart-button-container">
       <div style="text-align: center;">
-        <div id="paypal-button-container"></div>
+        <div style="margin-bottom: 1.25rem;">
+          <p></p>
+          <select id="item-options"><option value=" Goat Milk Soap Bar" price="6.00"> Goat Milk Soap Bar - 6.00 USD</option><option value="Ghiradeli Chocolate" price="3.49">Ghiradeli Chocolate - 3.49 USD</option><option value="Lemon & Mint Bubble Bath" price="8.00">Lemon & Mint Bubble Bath - 8.00 USD</option><option value="Caramel Popcorn" price="5.25">Caramel Popcorn - 5.25 USD</option><option value="Non-scented Candle" price="0.99">Non-scented Candle - 0.99 USD</option><option value="Mini Bluetooth Speaker (Comes with smooth jazz)" price="15.00">Mini Bluetooth Speaker (Comes with smooth jazz) - 15.00 USD</option></select>
+          <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option></select>
+        </div>
+      <div id="paypal-button-container"></div>
       </div>
     </div>
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
-  <script>
-    function initPayPalButton() {
-      paypal.Buttons({
-        style: {
-          shape: 'rect',
-          color: 'gold',
-          layout: 'vertical',
-          label: 'paypal',
-          
-        },
-
-        createOrder: function(data, actions) {
-          return actions.order.create({
-            purchase_units: [{"amount":{"currency_code":"USD","value":1}}]
-          });
-        },
-
-        onApprove: function(data, actions) {
-          return actions.order.capture().then(function(details) {
-            alert('Transaction completed by ' + details.payer.name.given_name + '!');
-          });
-        },
-
-        onError: function(err) {
-          console.log(err);
-        }
-      }).render('#paypal-button-container');
+    <script src="https://www.paypal.com/sdk/js?client-id=AfEqGSivnE9B0Iny7aaeV9b-4A4OHO3vq0n6PEBfloVH5sFjJ7KGVuU-5VZPkJd7m_7gO-aM7xSrDpeb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
+    <script>
+      function initPayPalButton() {
+        var shipping = 5.50;
+        var itemOptions = document.querySelector("#smart-button-container #item-options");
+    var quantity = parseInt(4);
+    var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
+    if (!isNaN(quantity)) {
+      quantitySelect.style.visibility = "visible";
     }
-    initPayPalButton();
-  </script>
+    var orderDescription = '';
+    if(orderDescription === '') {
+      orderDescription = 'Item';
+    }
+    paypal.Buttons({
+      style: {
+        shape: 'pill',
+        color: 'gold',
+        layout: 'vertical',
+        label: 'paypal',
+        
+      },
+      createOrder: function(data, actions) {
+        var selectedItemDescription = itemOptions.options[itemOptions.selectedIndex].value;
+        var selectedItemPrice = parseFloat(itemOptions.options[itemOptions.selectedIndex].getAttribute("price"));
+        var tax = (6 === 0 || false) ? 0 : (selectedItemPrice * (parseFloat(6)/100));
+        if(quantitySelect.options.length > 0) {
+          quantity = parseInt(quantitySelect.options[quantitySelect.selectedIndex].value);
+        } else {
+          quantity = 1;
+        }
+
+        tax *= quantity;
+        tax = Math.round(tax * 100) / 100;
+        var priceTotal = quantity * selectedItemPrice + parseFloat(shipping) + tax;
+        priceTotal = Math.round(priceTotal * 100) / 100;
+        var itemTotalValue = Math.round((selectedItemPrice * quantity) * 100) / 100;
+
+        return actions.order.create({
+          purchase_units: [{
+            description: orderDescription,
+            amount: {
+              currency_code: 'USD',
+              value: priceTotal,
+              breakdown: {
+                item_total: {
+                  currency_code: 'USD',
+                  value: itemTotalValue,
+                },
+                shipping: {
+                  currency_code: 'USD',
+                  value: shipping,
+                },
+                tax_total: {
+                  currency_code: 'USD',
+                  value: tax,
+                }
+              }
+            },
+            items: [{
+              name: selectedItemDescription,
+              unit_amount: {
+                currency_code: 'USD',
+                value: selectedItemPrice,
+              },
+              quantity: quantity
+            }]
+          }]
+        });
+      },
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
+          alert('Transaction completed by ' + details.payer.name.given_name + '!');
+        });
+      },
+      onError: function(err) {
+        console.log(err);
+      },
+    }).render('#paypal-button-container');
+  }
+  initPayPalButton();
+    </script>
   
   </html>
